fixing blog overflow

--- a/gatsby/src/assets/styles/global-scope/_theme.scss
+++ b/gatsby/src/assets/styles/global-scope/_theme.scss
@@ -600,6 +600,10 @@ div.cms-content {
     h1:first-of-type {
         display: none;
     }
+
+    pre {
+        overflow: scroll;
+    }
 }
 /*----- End CMS content -----*/
 
